# ancient-high-tech-compression

./: .cursorrules  .gitignore  COMPREHENSIVE_MORPHOLOGICAL_PATTERN_DETECTOR.py  CONTRACTION_SUPER_SYMBOL_INTEGRATION.py  README.md  SIMPLE_WORD_SYMBOL_MAPPING_SYSTEM.py  production_scanner.py  pyproject.toml  real-extraction-server.py  replit.md  stepped-pipeline-server.py
docs/: COORDINATE_ENCODING_EMPIRICAL_PERFORMANCE.md  COORDINATE_ENCODING_TIER_MARKER_FREE_ARCHITECTURE.md  TEMPLATE_SYSTEM_DEEP_DIVE.md
src/coordinate_encoding/: __init__.py  bit_packer.py  coordinate_decoder.py  coordinate_encoder.py  migration_utils.py  pattern_matcher.py  scanner_integration.py  template_cache.py
src/coordinate_encoding/templates/coordinate_patterns/: horizontal_coordinate_templates.json  template_metadata.json
tests/coordinate_encoding/: test_both_dimensions_templates.py  test_bugfixes_validation.py  test_critical_fix.py  test_decoding.py  test_duplicates.py  test_encoder_decoder_isolation.py  test_encoding.py  test_integration.py  test_large_gaps.py  test_pairing_integrity.py
