[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bleach>=6.2.0",
    "fake-useragent>=2.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "html2text>=2025.4.15",
    "markdown>=3.8",
    "markdownify>=1.1.0",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "python-readability>=0.1.3",
    "random-user-agent>=1.0.1",
    "requests>=2.32.3",
    "selenium-wire>=5.1.0",
    "selenium>=4.33.0",
    "trafilatura>=2.0.0",
    "validators>=0.35.0",
    "webdriver-manager>=4.0.2",
    "blinker>=1.9.0",
    "flask-limiter>=3.12",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "instaloader>=4.14.1",
    "gallery-dl>=1.29.7",
    "ffmpeg-python>=0.2.0",
    "ffmpeg>=1.4",
    "smartypants>=2.0.1",
    "textstat>=0.7.7",
    "langdetect>=1.0.9",
    "ftfy>=6.3.1",
    "cachetools>=6.0.0",
    "pygments>=2.19.1",
    "werkzeug>=3.1.3",
    "yt-dlp==2025.5.22",
    "aiohttp>=3.12.4",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "pydantic>=2.11.5",
    "base58>=2.1.1",
    "numpy>=2.3.0",
    "scikit-learn>=1.7.0",
    "ecdsa>=0.19.1",
    "beem>=0.24.27",
    "anthropic>=0.54.0",
    "english-words>=2.0.1",
    "nltk>=3.9.1",
    "openai>=1.88.0",
    "matplotlib>=3.10.3",
    "brotli>=1.1.0",
    "flask-socketio>=5.5.1",
    "python-socketio>=5.13.0",
    "eventlet>=0.40.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "spacy>=3.8.7",
    "pytest>=9.0.1",
]

[tool.uv.sources]
beem = { git = "https://github.com/openhive-network/beem.git" }
